# RaidFinder

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  RaidFinder.pro  appicon.rc  appveyor.yml  embed.py  main.cpp  raid_solver.py  resources.qrc
.ci/: after_build.sh  build.sh  install.sh
Core/: DenLoader.cpp  DenLoader.hpp  Frame.cpp  Frame.hpp  FrameCompare.cpp  FrameCompare.hpp  FrameFilter.cpp  FrameFilter.hpp  Game.hpp  Global.hpp  I18n.hpp  Nature.cpp  Power.cpp  Power.hpp  Profile.cpp  RaidGenerator.cpp  RaidGenerator.hpp  Resources.hpp  StateFilter.cpp  StateFilter.hpp  XoroShiro.hpp
Core/Bots/: BotCore.cpp  BotCore.hpp  RaidBot.cpp  RaidBot.hpp  SWSHBot.cpp  SWSHBot.hpp
Core/Bots/Workers/: BotWorker.cpp  BotWorker.hpp  RaidFinder.cpp  RaidFinder.hpp  StarFinder.cpp  StarFinder.hpp
Core/Generator/: RaidGenerator.cpp  RaidGenerator.hpp
Core/Loader/: DenLoader.cpp  DenLoader.hpp  PersonalLoader.cpp  PersonalLoader.hpp  ProfileLoader.cpp  ProfileLoader.hpp
Core/RNG/: XoroShiro.cpp  XoroShiro.hpp
Core/Results/: Den.cpp  Den.hpp  Frame.cpp  Frame.hpp  NestHoleDistributionEncounter8Archive.h  PersonalInfo.cpp  PersonalInfo.hpp  Pokemon.cpp  Pokemon.hpp  Profile.cpp  Profile.hpp  Raid.cpp  Raid.hpp  State.cpp  State.hpp
Core/Searcher/: Matrix.cpp  Matrix.hpp  SeedSearcher.cpp  SeedSearcher.hpp  SeedSearcher1.cpp  SeedSearcher1.hpp  SeedSearcher12.cpp  SeedSearcher12.hpp  SeedSearcher2.cpp  SeedSearcher2.hpp  SeedSearcher3.cpp  SeedSearcher3.hpp  SeedSearcher35.cpp  SeedSearcher35.hpp
Core/Util/: Global.hpp  IVChecker.cpp  IVChecker.hpp  Nature.cpp  Nature.hpp  Personal.cpp  Personal.hpp  Translator.cpp  Translator.hpp
Forms/: DenMap.cpp  DenMap.hpp  DenMap.ui  IVCalculator.cpp  IVCalculator.hpp  IVCalculator.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ProfileEditor.cpp  ProfileEditor.hpp  ProfileEditor.ui  ProfileManager.cpp  ProfileManager.hpp  ProfileManager.ui  SeedCalculator.cpp  SeedCalculator.ui
Forms/Controls/: CheckList.cpp  CheckList.hpp  IVFilter.cpp  IVFilter.hpp  Label.cpp  Label.hpp  TableView.cpp  TableView.hpp  TextBox.cpp  TextBox.hpp
Forms/Profile/: ProfileEditor.cpp  ProfileEditor.hpp  ProfileEditor.ui  ProfileManager.cpp  ProfileManager.hpp  ProfileManager.ui
Forms/Tools/: Bots.cpp  Bots.hpp  Bots.ui  DateCalculator.cpp  DateCalculator.hpp  DateCalculator.ui  DenMap.cpp  DenMap.hpp  DenMap.ui  EncounterLookup.cpp  EncounterLookup.hpp  EncounterLookup.ui  IVCalculator.cpp  IVCalculator.hpp  IVCalculator.ui  SeedCalculator.cpp  SeedCalculator.hpp  SeedCalculator.ui  Settings.cpp  Settings.hpp  Settings.ui  bots.cpp  bots.ui
Forms/Util/: RaidInfo12.cpp  RaidInfo12.hpp  RaidInfo12.ui  RaidInfo35.cpp  RaidInfo35.hpp  RaidInfo35.ui
Models/: FrameModel.cpp  FrameModel.hpp  ProfileModel.cpp  ProfileModel.hpp  StateModel.cpp  StateModel.hpp  TableModel.hpp
Resources/: nests.json  nests_event.json  species_en.txt  species_es.txt  species_fr.txt  species_it.txt
Resources/Encounters/: NestHoleDistributionEncounter8Archive.fbs  event.py  nests.json  nests_event.json
Resources/Images/: raidfinder.icns
Resources/Text/de/: locations_de.txt  (+2 more)
i18n/: RaidFinder_de.ts  RaidFinder_en.ts  RaidFinder_es.ts  RaidFinder_fr.ts  RaidFinder_it.ts  RaidFinder_ja.ts  RaidFinder_ko.ts  RaidFinder_pt.ts  RaidFinder_tw.ts  RaidFinder_zh.ts  RaidFinder_zh_Hans_CN.ts
(+104 files in other folders)
